Converted tank of the month over to an alert based system upon submitting because I could not get the bootstrap alerts to align correctly on the page. I also could not get the bootstrap-notify growl notifications to work. Had to go this route for now at least.

--- a/assets/css/fishy.css
+++ b/assets/css/fishy.css
@@ -420,6 +420,14 @@
 .totm .img-container img {
   width: 100%;
 }
+.totm .alert-fixed {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    z-index: 9999;
+    border-radius: 0px
+}
 
 .galleria{ 
     width: 50%  
